enhanced ui of the system check feature